fix header wrapping

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -86,7 +86,7 @@ a{
 .topOfHeader > h3{
     color: white;
     font-family: 'Eurostile', 'Jura';
-    font-size: 30px;
+    font-size: 26px;
 }
 
 .topOfHeader > p {
